# archery-auth

./: README.md  Tests.ipynb  pyproject.toml
archery_auth/: __init__.py  exceptions.py
archery_auth/parsers/auths/: emails.py  passwords.py  usernames.py
archery_auth/sql/: __init__.py
archery_auth/sql/controllers/: __init__.py  auths.py  roles.py
archery_auth/sql/models/: persons.py  roles.py
