[tool.poetry]
name = "archery-auth"
version = "0.1.0"
description = "Persons authorization information manager."
authors = ["Enio Climaco Sales Junior <eniocsjunior@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/archeryhq/archery-auth"
repository = "https://github.com/archeryhq/archery-auth"
documentation = "https://github.com/archeryhq/archery-auth/blob/main/README.md"
keywords = [
    "Authorization"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware",
    "Topic :: Security",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries"
]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.5"
psycopg2 = "^2.8.6"
archery-secret = {git = "https://github.com/archeryhq/archery-secret.git", rev = "main"}

[tool.poetry.dev-dependencies]
jupyterlab = "^3.0.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
